--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angularfire2": "^4.0.0-rc.1",
     "bootstrap": "^4.4.1",
     "firebase": "^4.2.0",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
